Correction contraste couleurs

--- a/style.css
+++ b/style.css
@@ -739,6 +739,10 @@ h4 {
     color: #FFFFFF!important;
 }
 
+.black {
+    color: #000000!important;
+}
+
 .portfolio-thumb {
     margin-bottom: 24px;
 }
@@ -775,12 +779,12 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #FFF!important;
 }
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #000000!important;
 }
 
 .btn-atomic-tangerine:hover {
@@ -929,7 +933,7 @@ h4 {
         background: rgba(0, 0, 0, .05);
         text-align: left;
         padding-left: 15px;
-        width: 100%;
+        width: 100%;<
     }
     .nav > li:hover {
         background: rgba(0, 0, 0, .08);
